<resources>
    <string name="app_name">StudioMusic</string>
    <string name="logoTitle">Studio</string>
    <string name="whitelogo">White Logo</string>
    <string name="top_header">Music For Everyone.</string>
    <string name="bottom_header">For Free.</string>
    <string name="google_login">Continue with Google</string>
    <string name="linkedin">Connect on LinkedIn</string>
    <string name="info">
        StudioMusic is a music streaming app solely made as a project showcasing skill sets and for fun.
        StudioMusic does not own or have copyrights of any of the songs on the platform.
        We do not make any money out of this.
        Please do not sue us.
    </string>
    <string name="sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prod_server">https://player.studiomusic.app/android</string>
    <string name="prod_server_media">https://player.studiomusic.app/listen</string>
    <string name="linkedin_uri">https://www.linkedin.com/in/vidhatashetty/</string>
    <string name="profilecheck_continue">Continue</string>
    <string name="homescreen_title">Home</string>
    <string name="library_title">Library</string>
    <string name="title_activity_fullscreen_loader">FullscreenLoader</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="most_played">Listen Again</string>
    <string name="from_history">FROM YOUR HISTORY</string>
    <string name="quick_picks">Quick Picks</string>
    <string name="start_radio_from_quick_picks">START RADIO FROM A SONG</string>
    <string name="new_releases">New Releases</string>
    <string name="recently_added">Recently Added</string>
    <string name="searchbar_hint">Search songs, albums and artists...</string>
    <string name="universal_message">We do not own any of the songs. This is just a project. Please do not sue us.</string>
    <string name="google_web_client_id">899587310580-2hn144rmn5e2mmjurigifgi573dclbgl.apps.googleusercontent.com</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update_string">You have a new update available!</string>
</resources>